fix alignment

--- a/www-develop/css/messenger.css
+++ b/www-develop/css/messenger.css
@@ -90,7 +90,7 @@
 .messenger-container .header .trip-preview {
     position: absolute;
     right: 10px;
-    bottom: -30px;
+    top: 50px;
     background-color: #000;
     z-index: 999;
 }
